syntax="proto3";
option go_package = "../pb";
package pb;

message VoteRequest {
  uint64 term = 1;
  uint64 candidateId = 2;
}

message VoteResponse {
  uint64 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leaderId = 2;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}

service Raft {
  rpc RequestVote(VoteRequest) returns (VoteResponse) {}
  rpc AppendEntry(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}